SPARQLWrapper's changelog:
-------------------------

2015-11-03  1.7.2   - Moved to the new keepalive package (issues #53 and #61)

2015-10-29  1.7.1   - Fixed build in Python 3.x (issue #57)

2015-10-29  1.7.0   - Added support to HTTP Digest Auth Support (issue #45)
                    - Improved print_results showing language tag (xml:lang) and datatype
                    - Updated to RDFLib 4.x

2014-08-26  1.6.4   - Fixed unicode problems on setup (issue #42)

2014-08-26  1.6.3   - Fixed unicode problems with urllib in Python 3 (issue #35)
                    - Restored SPARQLWrapper2 class (issue #36)
                    - Enhanced warning for missing rdflib-jsonld (issue #38)
                    - Fixed build system (issue #39)

2014-07-24  1.6.2   - Fixed query type detection with comments (issue #32)

2014-07-21  1.6.1   - Added missing query types (issue #17)
                    - Added a new method to the API to select the request method to be fully SPARQL 1.1 Protocol compliant (issue #28)             
                    - Improved the test suite coverage, including support to run the tests under Python 3.x (issues #20, #24 and #31)

2014-05-09  1.6.0   - Returning raw response in case of unknown content type returned
                    - Fixed some issues with the last version of the SPARQL 1.1 Update Protocol
                    - setQuery() doesn't imply resetQuery() anymore
                    - Deprecated addCustomParameter(), addParameter() and clearParameter() come to provide all required functionality
                    - SPARQLWrapper, QueryResult, Value, Bindings (and classes inherited from them) are new-style classes now
                    - POST queries are accompanied by full set of parameters now
                    - Added rudimentary support for JSON-LD
                    - Added proper unit tests without dependencies of external endpoints
                    - Fixed Python 3 compatibility issues in SmartWrapper module
